tooling/nargo_cli/tests/snapshots/execution_success/signed_comparison/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: i8, mut y: i8, z: i8) {
    let mut s1: i8 = 5_i8;
    let mut s2: i8 = 8_i8;
    assert(-(1_i8 as i8) < 0_i8);
    assert(x < y);
    assert(-x < y);
    assert(-y < -x);
    assert((z > x) == false);
    assert(x <= s1);
    assert(z < ((x - y) - s2));
}
