tooling/nargo_cli/tests/snapshots/execution_success/signed_comparison/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i8, v2: i8, v4: i8):
    v1 = allocate -> &mut i8
    store v0 at v1
    v3 = allocate -> &mut i8
    store v2 at v3
    (no terminator instruction)
}
